--- a/index.html
+++ b/index.html
@@ -405,12 +405,13 @@
                                         <li data-filter=".ml">Machine Learning </li>
 
                                         <li data-filter=".robotics">Robotics </li>
+                                        <li data-filter=".computervision">Computer Vision </li>
                                         <li data-filter=".appwebdesign">App/Web Design</li>
                                     </ul>
                                 </div>
                                 <div class="portfolio-container row isotope" id="portfolio-container">
                                     <!-- WORK 1 START -->
-                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml">
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml computervision">
                                         <a  target="_blank"  href="https://github.com/shafieelab/Medical-Domain-Adaptive-Neural-Networks">
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
@@ -422,12 +423,12 @@
                                                     </div>
                                                     <div class="portfolio-overlay"></div>
                                                 </div>
-                                                <img src="images/portfolio/research/MDnets.jpg" alt="">
+                                                <img src="images/portfolio/research/MDnets.png" alt="">
                                             </div>
                                         </a>
                                     </div>
                                     <!-- WORK 1 END -->
-                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml">
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml computervision">
                                         <a  target="_blank"  href="https://github.com/shafieelab/SPyDERMAN">
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
@@ -445,7 +446,7 @@
                                     </div>
                                     <!-- WORK 1 END -->
                                     <!-- WORK 1 END -->
-                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml">
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml robotics computervision">
                                         <a  target="_blank"  href="https://github.com/hemanthkandula/Drone-Navigation-Domain-Adaption-Deep-RL">
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
@@ -462,7 +463,93 @@
                                         </a>
                                     </div>
 
-                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item web">
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml appwebdesign computervision">
+                                        <a  target="_blank"  href="https://pubs.rsc.org/en/content/articlehtml/2019/lc/c8lc00792f">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>In Home Ovulation testing
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/loc-ova.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml computervision">
+                                        <a  target="_blank"  href="https://doi.org/10.1039/C9LC00721K">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Inexpensive
+                                                            automated deep learning-based imaging systems
+                                                            for IVF
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/embryo-devices-paper.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml computervision">
+                                        <a  target="_blank"  href="https://doi.org/10.1039/C9LC00721K">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>
+                                                            Automated AI system
+                                                            for IVF
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/embryo-ivf.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml appwebdesign">
+                                        <a  target="_blank"  href="https://doi.org/10.1039/C9LC00721K">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Data Collection App - Human Embryos
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/embryo-data-collection-app.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item computervision appwebdesign">
+                                        <a  target="_blank"  href="https://doi.org/10.1039/C9LC00721K">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Sperm DNA fragmentation and HBA assay scores
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/Sperm%20DNA%20fragmentation%C2%A0and%20HBA%20assay%20scores.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item appwebdesign">
                                         <a  target="_blank"  href="https://shafieelab.bwh.harvard.edu/">
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
@@ -534,7 +621,7 @@
                                     <!-- WORK 2 END -->
 
                                     <!-- WORK 4 START -->
-                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml">
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item computervision">
                                         <a target="_blank"  href="https://highvison.netlify.app/">
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
@@ -552,7 +639,7 @@
                                     <!-- WORK 4 START -->
 
                                     <!-- WORK 4 START -->
-                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml">
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item computervision ml">
                                         <a target="_blank"  href="https://devpost.com/software/smart-cane-for-visually-impaired">
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
@@ -569,7 +656,7 @@
                                         </a>
                                     </div>
                                     <!-- WORK 4 START -->
-                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml">
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item computervision ml">
                                         <a target="_blank"  href="https://devpost.com/software/maker-ai-8jvox6">
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
