--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
                                         <li data-filter=".robotics">Robotics </li>
                                         <li data-filter=".computervision">Computer Vision </li>
                                         <li data-filter=".appwebdesign">App/Web Design</li>
+                                        <li data-filter=".poster">Conference Posters </li>
                                     </ul>
                                 </div>
                                 <div class="portfolio-container row isotope" id="portfolio-container">
@@ -579,6 +580,56 @@
                                                     <div class="portfolio-overlay"></div>
                                                 </div>
                                                 <img src="images/portfolio/thumbnails/quad-main.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item poster ml">
+                                        <a target="_blank" href="https://poster.bwh.harvard.edu/sai-hemanth-kumar-kandula/">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>A Deep Learning Framework Outperforms Embryologists
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/HIGHEST-IMPLANTATION-POTENTIAL_hemanth-.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item poster ml">
+                                        <a target="_blank" href="projects/docs/ASRM poster - oocyte.pdf">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Deep-learning enables prediction of fertilization based on
+                                                            oocyte morphological quality
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/dl-embryo-oocyte-poster.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item poster ml">
+                                        <a target="_blank" href="projects/docs/ASRM poster smartphone-based system.pdf">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Deep learning-enabled smartphone-based system for IVF
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/dl-smartphone-embryo.png" alt="">
                                             </div>
                                         </a>
                                     </div>
