--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                     <div class="exp-holder">
                                         <div class="exp">
                                             <div class="hgroup">
-                                                <h3><span>Research Assistant </span> Shafiee Lab, Harvard Medical School</h3>
+                                                <h3><span>Machine Learning Researcher </span> Shafiee Lab, Harvard Medical School</h3>
                                                 <h5>Dec 2017 - <span class="current">Present</span></h5>
                                             </div>
 
