--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
 
                                         <div class="exp">
                                             <div class="hgroup">
-                                                <h3><span>App Developer</span> 300dpi, SASTRA University </h3>
+                                                <h3><span>App Developer</span> 300dpi Design. Inc,  </h3>
                                                 <h5>Aug 2016 - Oct 2017</h5>
                                             </div>
-                                            <p>Developed android applications for college cultural festivals for participants and organizers of Sastra University which were used by 10,000+ students from various colleges in India.
-
+                                            <p>
+Primarily involved in designing and building Android applications. These apps were custom-made for university cultural festivals, aiming to enhance the experience for both participants and organizers. They successfully served a user base of over 10,000 students from various colleges across India, with Sastra University being our primary client for these projects.
                                             </p>
 
                                         </div>
