--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!--                            Feel free to reach out to me about anything! </p>-->
                         <br>
 <p>
-I'm currently working as Research Engineer II at Raytheon Technologies working on NLP and Deep learning for DARPA and IRAPA projects. 
+I'm currently working as Research Engineer II at Raytheon BBN Technologies working on NLP and Deep learning for DARPA and IRAPA projects.
     </p>
 <p>
 In my previous role at Harvard Medical School, I used deep learning to solve a few of the major unmet needs in Healthcare. In my recent project, developed learning algorithms that facilitate the transfer of information through unsupervised and self-supervised model adaptation and generalization for biomedical imaging. (Published in Nature BME).
@@ -187,14 +187,30 @@ In my previous role at Harvard Medical School, I used deep learning to solve a f
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="exp-holder">
+
+                                     <div class="exp">
+                                            <div class="hgroup">
+                                                <h3><span>Research Engineer II </span> Raytheon BBN Technologies</h3>
+                                                <h5>July 2021 - <span class="current">Present</span></h5>
+                                            </div>
+
+                                            <p> Engaged in cutting-edge research and development projects funded by DARPA and IARPA, primarily focusing on advancing the state of Machine Learning (ML), Natural Language Processing (NLP), and Computer Vision (CV) technologies.</p>
+                                            <ul>
+
+                                                    <li>•  Currently working closely with a multidisciplinary team of researchers, engineers, and domain experts on IARPA HIATUS tackling challenging Authorship Attribution tasks, leveraging advanced NLP and ML techniques.
+                                                    <li>• Currently developing advanced semantic segmentation models leveraging deep learning and global pose estimation for accurate 3D site modeling from satellite, aerial, and ground imagery in the IARPA WRIVA project
+                                                    <li>•  Played a pivotal role in the IARPA BETTER program and led the task of enhancing IE system by integrating sophisticated techniques for granular information extraction, question-answering, and textual entailment slot-filling, significantly improving BBN’s system performance.
+                                                    <li>•  Engineered a Transformers-based Information Retrieval (IR) re-ranker system for the IARPA BETTER program, which markedly improved the efficacy of BBN’s probabilistic IR system,  leading to more accurate document retrieval.
+                                                    <li>•  Led a specialized effort under the DARPA HUGO program, overseeing the collection, curation, and assessment of Hindi datasets. Effectively communicated the accomplishments and progress to DARPA, ensuring transparency and alignment with project goals.
+                                                    <li>•  Maintaining an active role in contributing to BBN NLP repositories, helping in the refinement and evolution of the software stack
+                                            </ul>
+                                        </div>
+
                                         <div class="exp">
                                             <div class="hgroup">
                                                 <h3><span>Machine Learning Researcher </span> Shafiee Lab, Harvard Medical School</h3>
-                                                <h5>Dec 2017 - <span class="current">Present</span></h5>
+                                                <h5>Dec 2017 - Aug 2021</span></h5>
                                             </div>
-
-
-
                                             <p> Managed projects that solved a few of the major unmet needs in human fertility, viral diagnostics with a diverse team of clinicians and engineers resulted in 14+ journal and conference articles.</p>
                                             <ul>
                                                 <li>•  Designed two state-of-the-art adversarial unsupervised and self-supervised domain adaption methods and investigated domain-shifted medical datasets. (Accepted for publication at Nature BME Journal.) </li>
