--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
         <!--<div class="anim pulse"><i class="ion-ios-bolt-outline"></i></div>-->
     <!--</div>-->
     <!--<div class="preloader-left"></div>-->
-    <div class="inline-menu-container">
-        <span class="status">Open To Work </span>
-        <ul class="inline-menu">
-            <li class="about menu-item">Resume</li>
-            <li class="portfolio menu-item">Projects</li>
-            <li class="research menu-item">Publications</li>
+<!--    <div class="inline-menu-container">-->
+<!--        <span class="status">Hello</span>-->
+<!--        <ul class="inline-menu">-->
+<!--            <li class="about menu-item">Resume</li>-->
+<!--            <li class="portfolio menu-item">Projects</li>-->
+<!--            <li class="research menu-item">Publications</li>-->
 
-            <li class="contact menu-item">Contact</li>
+<!--            <li class="contact menu-item">Contact</li>-->
 
-            <li id="close" class="menu-item"><i class="ion-ios-close-empty"></i></li>
-        </ul>
-    </div>
+<!--            <li id="close" class="menu-item"><i class="ion-ios-close-empty"></i></li>-->
+<!--        </ul>-->
+<!--    </div>-->
     <section class="home img-bg" style="background: url(images/bg/giphy6.gif) 0 0; background-size: cover;">
         <div class="overlay opacity5"></div>
         <div class="container">
@@ -417,14 +417,71 @@ Primarily involved in designing and building Android applications. These apps we
                                     <ul id="filters">
                                         <li class="active" data-filter="*">All</li>
                                         <li data-filter=".ml">Machine Learning </li>
-
-                                        <li data-filter=".robotics">Robotics </li>
+                                        <li data-filter=".nlp">NLP </li>
                                         <li data-filter=".computervision">Computer Vision </li>
+                                        <li data-filter=".robotics">Robotics </li>
                                         <li data-filter=".appwebdesign">App/Web Design</li>
                                         <li data-filter=".poster">Conference Posters </li>
                                     </ul>
                                 </div>
                                 <div class="portfolio-container row isotope" id="portfolio-container">
+                                     <!-- WORK 1 START -->
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml nlp">
+                                        <a  target="_blank"  href="https://www.iarpa.gov/research-programs/better">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>IARPA BETTER
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/iarpa_better.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <!-- WORK 1 END -->
+
+                                                                         <!-- WORK 1 START -->
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml nlp">
+                                        <a  target="_blank"  href="https://www.iarpa.gov/research-programs/hiatus">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>IARPA HIATUS
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/iarpa_hiatus.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <!-- WORK 1 END -->
+
+                                    <!-- WORK 1 START -->
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml computervision">
+                                        <a  target="_blank"  href="https://www.iarpa.gov/research-programs/wriva">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>IARPA WRIVA
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/iarpa_wriva.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <!-- WORK 1 END -->
+
                                     <!-- WORK 1 START -->
                                     <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml computervision">
                                         <a  target="_blank"  href="https://github.com/shafieelab/Medical-Domain-Adaptive-Neural-Networks">
@@ -833,7 +890,7 @@ Primarily involved in designing and building Android applications. These apps we
                         <p align="center">
                             <a target="_blank" href="https://www.linkedin.com/in/hemanthkandula"><img src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
                                <a target="_blank" href="https://twitter.com/hemanthkandula"><img src="https://img.shields.io/badge/twitter-%231DA1F2.svg?&style=for-the-badge&logo=twitter&logoColor=white" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                            <a href="mailto:hemanth.kandula@gmail.com?subject=Hello Hemanth, From GitHub"><img src="https://img.shields.io/badge/gmail-%23D14836.svg?&style=for-the-badge&logo=gmail&logoColor=white" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                            <a href="mailto:hemanth.kandula@gmail.com?subject=Hello Hemanth"><img src="https://img.shields.io/badge/gmail-%23D14836.svg?&style=for-the-badge&logo=gmail&logoColor=white" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
                         </p>
                         <div class="row">
 
