--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <section class="content" id="about">
                     <div class="block-content">
                         <h3 class="block-title">Profile</h3>
-                        <h3 class="subheading">Hi... I'm a <strong>AI Researcher & APP Developer</strong> with 6+ years of academic and professional experience in the field of deep learning for Healthcare and Robotics.
+                        <h3 class="subheading">Hi... I'm a <strong>AI Researcher </strong> with 6+ years of academic and professional experience in the field of deep learning for Healthcare and Robotics.
                            </h3>
                         <h3> •  Led multi‑phased research initiatives with a direct impact on patient healthcare</h3>
 
